2002-11-24 Andras Varga

	* modinsp.tcl: with "ring" layout, changed order of modules
	from clockwise to the more natural counter-clockwise

	* bugfix: cHead could not be inspected

2002-11-12 Andras Varga

	* ported to Tk8.4 (several 'char *' to 'const char *' changes)

	* renamed several internal methods in tklib.cc for clarity

2002-11-03  Andras Varga

	* tkapp.cc: clear main window when simulation is restarted

2002-10-27  Andras Varga

	* inspect.cc, tkapp.cc,..: inspectorfactory registration moved here 
	from sim/

	* reorganized source files (split large .cc and .h files)

	* reorganized the way inspectors are found and created

2002-10-26  Andras Varga

	* outvector inspectors: added basic labeling to axes

	* implemented that inspector windows are restored if you restart
	the simulation, and even if you quit/restart Tkenv. List of open
	inspectors is saved in ./tkenvrc which is automatically loaded
	on startup and written on exit. 
	
	In .tkenvrc, inspectors are identified by object name (obj->fullPath()) 
	and class name (obj->className()), so make sure to use locally unique
	names for variables you want to inspect.

	Inspector windows usually cannot be opened immediately when .tkenvrc 
	is loaded (the corresponding objects don't exist yet), so Tkenv keeps 
	a "pending inspectors list" for the inspectors to be opened.
	At each display update, Tkenv tries to find the corresponding objects 
	in the network and open inspectors for them. Be aware that this
	object search is relatively expensive operation, so Tkenv performance
	may degrade if there are too many pending inspectors. If the network
	you're running under Tkenv changes often, it's a good idea to 
	delete .tkenvrc manually sometimes to clean it from garbage (i.e. from 
	obsolete entries).
	 
2002-10-04  Andras Varga

	* error handling changed from simulation.ok() to exceptions.

2002-07-03  Andras Varga

	* modinsp2.tcl (graphmodwin_animate): set upper limit to animation 